--- a/b8/my-layout-SanPham.html
+++ b/b8/my-layout-SanPham.html
@@ -12,6 +12,21 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <!-- JQuery -->
+    <script src="js/jquery-3.5.1.js"></script>
+
+    <script>
+        $(document).ready(function() {
+            $(".thongTinSP").each(function(index) {
+                $(this).on("click", function() {
+                    var a = $(this).parent().parent();
+                    a = a.prev();
+                    $(".modal-body").html("<img src=" + a.attr("src") + ">");
+                });
+            });
+        });
+    </script>
+
     <style>
         .breadcrumb {
             background-color: transparent;
@@ -25,6 +40,10 @@
 
         .section-menu {
             background-color: bisque;
+        }
+
+        .badge:hover {
+            cursor: pointer;
         }
     </style>
 
@@ -50,14 +69,43 @@
     <div class="container">
         <div class="row section-menu">
             <div class="col-12 border">
-                <nav class="nav">
-                    <a class="nav-link" href="#"><i class="fa fa-home" aria-hidden="true"></i> Trang chủ</a>
-                    <a class="nav-link" href="#"><i class="fa fa-android" aria-hidden="true"></i> Android</a>
-                    <a class="nav-link text-warning" href="#"><i class="fa fa-apple" aria-hidden="true"></i> Iphone</a>
-                    <a class="nav-link" href="#"><i class="fa fa-comment" aria-hidden="true"></i> Giới thiệu</a>
-                    <a class="nav-link" href="#"><i class="fa fa-link" aria-hidden="true"></i> Liên hệ</a>
-                    <a class="nav-link" href="#"><i class="fa fa-align-justify" aria-hidden="true"></i> Chọn hệ điều
-                        hành <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                <nav class="navbar navbar-expand-sm navbar-light bg-light">
+                    <!-- <a class="navbar-brand" href="#">Navbar</a>
+                    <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button> -->
+                    <div class="collapse navbar-collapse" id="collapsibleNavId">
+                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#"><i class="fa fa-home" aria-hidden="true"></i> Trang chủ <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#"><i class="fa fa-android" aria-hidden="true"></i> Android</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-warning" href="#"><i class="fa fa-apple" aria-hidden="true"></i> Iphone</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#"><i class="fa fa-comment" aria-hidden="true"></i> Giới thiệu</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#"><i class="fa fa-link" aria-hidden="true"></i> Liên hệ</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-align-justify" aria-hidden="true"></i> Chọn hệ điều
+                                    hành</a>
+                                <div class="dropdown-menu" aria-labelledby="dropdownId">
+                                    <a class="dropdown-item" href="#">Android</a>
+                                    <a class="dropdown-item" href="#">iOS</a>
+                                </div>
+                            </li>
+                        </ul>
+                        <form class="form-inline my-2 my-lg-0">
+                            <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        </form>
+                    </div>
                 </nav>
             </div>
         </div>
@@ -76,7 +124,11 @@
     <div class="container">
         <div class="row">
             <div class="col-3 border">
-                Left
+                <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action active">Active item</a>
+                    <a href="#" class="list-group-item list-group-item-action">Item</a>
+                    <a href="#" class="list-group-item list-group-item-action disabled">Disabled item</a>
+                </div>
             </div>
             <div class="col-9 border">
                 <div class="container">
@@ -103,7 +155,51 @@
                             </nav>
                         </div>
                     </div>
-
+                    <!-- Carousel -->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12">
+                                <div id="carouselId" class="carousel slide" data-ride="carousel">
+                                    <ol class="carousel-indicators">
+                                        <li data-target="#carouselId" data-slide-to="0" class="active"></li>
+                                        <li data-target="#carouselId" data-slide-to="1"></li>
+                                        <li data-target="#carouselId" data-slide-to="2"></li>
+                                    </ol>
+                                    <div class="carousel-inner" role="listbox">
+                                        <div class="carousel-item active">
+                                            <img src="images/banner/portfolio-1.jpg" alt="First slide">
+                                            <div class="carousel-caption d-none d-md-block">
+                                                <h3>Title</h3>
+                                                <p>Description</p>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="images/banner/portfolio-2.jpg" alt="Second slide">
+                                            <div class="carousel-caption d-none d-md-block">
+                                                <h3>Title</h3>
+                                                <p>Description</p>
+                                            </div>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="images/banner/portfolio-4.jpg" alt="Third slide">
+                                            <div class="carousel-caption d-none d-md-block">
+                                                <h3>Title</h3>
+                                                <p>Description</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <a class="carousel-control-prev" href="#carouselId" role="button" data-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#carouselId" role="button" data-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <!-- Danh sách sản phẩm -->
                     <div class="container section-SanPham">
                         <div class="row">
@@ -120,7 +216,7 @@
                                         <p class="card-text text-danger">Giá: 10.000.000</p>
                                         <p class="card-text text-right">
                                             <i class="fa fa-info" aria-hidden="true"></i>
-                                            <span class="badge badge-danger">Chi tiết</span>
+                                            <span class="badge badge-danger thongTinSP" data-toggle="modal" data-target="#modelId">Chi tiết</span>
                                             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                                             <span class="badge badge-danger">Mua Hàng</span>
                                         </p>
@@ -135,7 +231,7 @@
                                         <p class="card-text text-danger">Giá: 12.000.000</p>
                                         <p class="card-text text-right">
                                             <i class="fa fa-info" aria-hidden="true"></i>
-                                            <span class="badge badge-danger">Chi tiết</span>
+                                            <span class="badge badge-danger thongTinSP" data-toggle="modal" data-target="#modelId">Chi tiết</span>
                                             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                                             <span class="badge badge-danger">Mua Hàng</span>
                                         </p>
@@ -150,7 +246,7 @@
                                         <p class="card-text text-danger">Giá: 13.000.000</p>
                                         <p class="card-text text-right">
                                             <i class="fa fa-info" aria-hidden="true"></i>
-                                            <span class="badge badge-danger">Chi tiết</span>
+                                            <span class="badge badge-danger thongTinSP" data-toggle="modal" data-target="#modelId">Chi tiết</span>
                                             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                                             <span class="badge badge-danger">Mua Hàng</span>
                                         </p>
@@ -167,7 +263,7 @@
                                         <p class="card-text text-danger">Giá: 14.000.000</p>
                                         <p class="card-text text-right">
                                             <i class="fa fa-info" aria-hidden="true"></i>
-                                            <span class="badge badge-danger">Chi tiết</span>
+                                            <span class="badge badge-danger thongTinSP" data-toggle="modal" data-target="#modelId">Chi tiết</span>
                                             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                                             <span class="badge badge-danger">Mua Hàng</span>
                                         </p>
@@ -182,7 +278,7 @@
                                         <p class="card-text text-danger">Giá: 15.000.000</p>
                                         <p class="card-text text-right">
                                             <i class="fa fa-info" aria-hidden="true"></i>
-                                            <span class="badge badge-danger">Chi tiết</span>
+                                            <span class="badge badge-danger thongTinSP" data-toggle="modal" data-target="#modelId">Chi tiết</span>
                                             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                                             <span class="badge badge-danger">Mua Hàng</span>
                                         </p>
@@ -197,7 +293,7 @@
                                         <p class="card-text text-danger">Giá: 16.000.000</p>
                                         <p class="card-text text-right">
                                             <i class="fa fa-info" aria-hidden="true"></i>
-                                            <span class="badge badge-danger">Chi tiết</span>
+                                            <span class="badge badge-danger thongTinSP" data-toggle="modal" data-target="#modelId">Chi tiết</span>
                                             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                                             <span class="badge badge-danger">Mua Hàng</span>
                                         </p>
@@ -214,7 +310,7 @@
                                         <p class="card-text text-danger">Giá: 17.000.000</p>
                                         <p class="card-text text-right">
                                             <i class="fa fa-info" aria-hidden="true"></i>
-                                            <span class="badge badge-danger">Chi tiết</span>
+                                            <span class="badge badge-danger thongTinSP" data-toggle="modal" data-target="#modelId">Chi tiết</span>
                                             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                                             <span class="badge badge-danger">Mua Hàng</span>
                                         </p>
@@ -229,7 +325,7 @@
                                         <p class="card-text text-danger">Giá: 18.000.000</p>
                                         <p class="card-text text-right">
                                             <i class="fa fa-info" aria-hidden="true"></i>
-                                            <span class="badge badge-danger">Chi tiết</span>
+                                            <span class="badge badge-danger thongTinSP" data-toggle="modal" data-target="#modelId">Chi tiết</span>
                                             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                                             <span class="badge badge-danger">Mua Hàng</span>
                                         </p>
@@ -244,7 +340,7 @@
                                         <p class="card-text text-danger">Giá: 19.000.000</p>
                                         <p class="card-text text-right">
                                             <i class="fa fa-info" aria-hidden="true"></i>
-                                            <span class="badge badge-danger">Chi tiết</span>
+                                            <span class="badge badge-danger thongTinSP" data-toggle="modal" data-target="#modelId">Chi tiết</span>
                                             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                                             <span class="badge badge-danger">Mua Hàng</span>
                                         </p>
@@ -261,7 +357,7 @@
                                         <p class="card-text text-danger">Giá: 19.099.000</p>
                                         <p class="card-text text-right">
                                             <i class="fa fa-info" aria-hidden="true"></i>
-                                            <span class="badge badge-danger">Chi tiết</span>
+                                            <span class="badge badge-danger thongTinSP" data-toggle="modal" data-target="#modelId">Chi tiết</span>
                                             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                                             <span class="badge badge-danger">Mua Hàng</span>
                                         </p>
@@ -294,6 +390,27 @@
                             </nav>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+   
+    <!-- Modal -->
+    <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                </div>
+                <div class="modal-body">
+                    Body
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save</button>
                 </div>
             </div>
         </div>
